--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,17 +1,16 @@
 header {
-  height: 75px;
+  height: 80px;
   padding: 1rem;
   font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  z-index: 10;
+  z-index: 100;
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 /** nav*/
@@ -38,4 +37,10 @@ header {
   background-color: rgb(122, 205, 122);
   transform: scale(1.02);
   transition: 0.2s ease-in-out;
+}
+
+@media(max-width:992px){
+  #header{
+    height: 90px;
+  }
 }
