--- a/src/main/webapp/resources/css/board/fb_list.css
+++ b/src/main/webapp/resources/css/board/fb_list.css
@@ -102,7 +102,10 @@ button a:hover {
 
 @media screen and (max-width: 944px) {
   .board_contents {
-    height: 206px;
+    height: 190px;
+  }
+  .sort {
+  	margin-top: 10px;
   }
   .list_contents {
   	margin-top: 10px;
