수강평게시판 이동

--- a/src/main/webapp/resources/css/lecture/cart.css
+++ b/src/main/webapp/resources/css/lecture/cart.css
@@ -2,3 +2,14 @@
     font-size: x-large;
     font-weight: bold;
 }
+
+#del, #sign{
+    font-weight: bold;
+    font-size: large;
+}
+
+#cart,#title{
+    border-style: solid;
+    border-width: thin;
+    border-radius: 10px;
+}
