--- a/src/main/webapp/resources/css/lecture/update.css
+++ b/src/main/webapp/resources/css/lecture/update.css
@@ -6,3 +6,12 @@
 #updateform{
     font-weight: bold;
 }
+
+#file_sub{
+    font-weight: bold;
+    font-size: large;
+}
+
+#sum{
+    margin-top: 20px;
+}
