FreeBoard_reply_add

--- a/src/main/webapp/resources/css/board/sb_detail.css
+++ b/src/main/webapp/resources/css/board/sb_detail.css
@@ -167,6 +167,7 @@ input:focus {
   border: none;
   background-color: transparent;
   color: rgba(255, 0, 0, 0.87);
+  font-size: 12px;
 }
 .text_delete_btn:active {
   transform: scale(1.03);
