--- a/src/main/webapp/resources/css/board/fb_detail.css
+++ b/src/main/webapp/resources/css/board/fb_detail.css
@@ -1,55 +1,65 @@
 /**Board-Contents*/
 .board {
-    margin-top: 9.7em;
-    width: 70%;
-    margin-bottom: 2em;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  margin-top: 9.7em;
+  width: 70%;
+  margin-bottom: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 .board_contents {
-    border-bottom: solid 1px rgba(156, 152, 152, 0.664);
-    height: 160px;
-    width: 97%;
-    margin: 0px auto;
-    padding: 0px 20px;
-    z-index: 10px;
-    position: relative;
+  border-bottom: solid 1px rgba(156, 152, 152, 0.664);
+  height: 160px;
+  width: 97%;
+  margin: 0px auto;
+  padding: 0px 20px;
+  z-index: 10px;
+  position: relative;
 }
 
 .b1 {
-    border: none;
-    position: absolute;
-    bottom: 17px;
-    font-size: 15px;
-    font-weight: 600;
-    background-color: transparent;
+  border: none;
+  position: absolute;
+  bottom: 17px;
+  font-size: 15px;
+  font-weight: 600;
+  background-color: transparent;
 }
 .b1 div {
-    margin: 0px auto;
+  margin: 0px auto;
 }
 
 /**fb_contents*/
 .fb_contents {
-    padding: 2em;
-    background-color: rgba(233, 248, 166, 0.267);
-    width: 100%;
+  padding: 2em;
+  background-color: rgba(233, 248, 166, 0.267);
+  width: 100%;
 }
 .fb_contents h5 {
-    line-height: 33px;
-    font-size: 16px;
+  line-height: 33px;
+  font-size: 16px;
 }
 
 .share a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 .share a:hover {
-    font-weight: bold;
-    color: black;
-} 
+  font-weight: bold;
+  color: black;
+}
 
 /**reply*/
+.text_delete_btn {
+  border: none;
+  background-color: transparent;
+  color: rgba(255, 0, 0, 0.87);
+  font-size: 12px;
+}
+.text_delete_btn:active {
+  transform: scale(1.03);
+}
 #reply {
   border: none;
   background-color: transparent;
@@ -87,57 +97,55 @@ input:focus {
   outline: none;
 }
 
-#plus{
-    border: none;
-    background-color: transparent;
-    font-weight: bolder;
-    color: rgb(70, 70, 70);
+#plus {
+  border: none;
+  background-color: transparent;
+  font-weight: bolder;
+  color: rgb(70, 70, 70);
 }
 #plus:active {
-    color: black;
-    transform: scale(1.03);
+  color: black;
+  transform: scale(1.03);
 }
-
 
 /**Fix_box*/
 
 .fix_btn {
-    position: absolute;
-    position:fixed;
-    top: 9em;
-    left: 0em;
-    border: none;
-    height: 40px;
-    font-size: 45px;
-    width: 6em;
-    background-color:transparent;
-    border-radius: 10px;
-    color: lightgrey;
+  position: absolute;
+  position: fixed;
+  top: 9em;
+  left: 0em;
+  border: none;
+  height: 40px;
+  font-size: 45px;
+  width: 6em;
+  background-color: transparent;
+  border-radius: 10px;
+  color: lightgrey;
 }
 
-@media screen and (max-width:820px){
-.fix_btn {
+@media screen and (max-width: 820px) {
+  .fix_btn {
     left: -2em;
-}   
+  }
 }
 
-  
-.fix_btn:active{
-    transform: scale(1.07);
+.fix_btn:active {
+  transform: scale(1.07);
 }
 
 /**button-style*/
 .btn-st {
-    border: none;
-    background-color: transparent;
-    font-weight: bolder;
+  border: none;
+  background-color: transparent;
+  font-weight: bolder;
 }
 
 /**heart*/
 .fa-heart {
-    font-size: 25px; 
-    color: rgba(85, 69, 69, 0.37);
+  font-size: 25px;
+  color: rgba(85, 69, 69, 0.37);
 }
 .fa-heart:active {
-    color: red;
+  color: red;
 }
