--- a/src/main/webapp/resources/css/lecture/listen.css
+++ b/src/main/webapp/resources/css/lecture/listen.css
@@ -1,8 +1,8 @@
 #sidebar-wrapper{
-    width: 200px;
+    width: 270px;
     font-weight: bold;
     position: fixed;
-    left: -200px;
+    left: -270px;
     height: 700%;
     z-index: 999;
 }
@@ -35,7 +35,7 @@
     color: #66ba39;
     font-weight: bold;
     border: none;
-    font-size: x-large;
+    font-size:xx-large;
 }
 
 #sidebar-wrapper{
@@ -45,7 +45,7 @@
 
 
 #wrapper.active{ 
-    margin-left: 200px;
+    margin-left: 270px;
 } 
 
 
