index-a tag update

--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -174,9 +174,10 @@ body {
   font-weight: bold;
   letter-spacing: 2px;
 }
-
 .login a {
-	border: none;
+	 font-size: 13.5px;
+	text-decoration: none;
+	color: black;
 }
 
 /**강의 상단*/
