수강 종료 날짜 지나면 수강 상태 변경 완료

--- a/src/main/webapp/resources/css/lecture/lecture_detail.css
+++ b/src/main/webapp/resources/css/lecture/lecture_detail.css
@@ -31,8 +31,8 @@
   }
 
  #board,#signs,#listen,#update,#de{
-    margin-left: 40px;
-    margin-bottom: 50px;
+    /*margin-left: 40px;*/
+    margin-bottom: 30px;
     font-weight: bold;
     font-size:x-large;
   }
