--- a/src/main/webapp/resources/css/admin/bscommon.css
+++ b/src/main/webapp/resources/css/admin/bscommon.css
@@ -14,3 +14,11 @@
     border-color:#aed581;
     box-shadow: 0 0 0 0.25rem #e1ffb1;
 }
+
+.ilseok a{
+    color: darkgreen;
+}
+
+.ilseok .page-link{
+    color: darkgreen;
+}
