--- a/src/main/webapp/resources/css/lecture/list.css
+++ b/src/main/webapp/resources/css/lecture/list.css
@@ -31,7 +31,7 @@
 
 }
 
-#div1,#div2{
+#div1,#div2,#div3,#div4,#div5,#div6,#div7,#div8,#div9{
     color: red;
     font-size: small;
     font-weight: bold;
