--- a/src/main/webapp/resources/css/lecture/update.css
+++ b/src/main/webapp/resources/css/lecture/update.css
@@ -15,3 +15,9 @@
 #sum{
     margin-top: 20px;
 }
+
+#div1,#div2,#div3,#div4,#div5,#div6,#div7,#div8,#div9{
+    color: red;
+    font-size: small;
+    font-weight: bold;
+}
